# mini-knowledge-graph

./: .dockerignore  .env.example  .gitignore  ABOUTME.md  AI_NOTES.md  PROMPTS_USED.md  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml
backend/app/: config.py  database.py  groq_service.py  main.py  models.py  routes.py
backend/app/api/: admin_routes.py  auth_routes.py  entities_routes.py  health_routes.py  relationships_routes.py  workspace_routes.py
backend/app/auth/: bearer.py  schemas.py  services.py
backend/app/core/: config.py  database.py
backend/app/models/: sql.py
backend/app/schemas/: pydantic_models.py
backend/app/utils/: helpers.py
backend/app/worker/: graph_maker.py  groq_service.py  main.py
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/pages/: Dashboard.jsx  ForgotPassword.jsx  GraphView.jsx  HelpPage.jsx  LandingPage.jsx  Login.jsx  Register.jsx  StatusPage.jsx
